[project]
name = "wizarr"
version = "2.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apprise>=1.9.3",
    "boto3>=1.38.18",
    "cachetools>=5.5.2",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-apscheduler>=1.13.1",
    "flask-babel>=4.0.0",
    "flask-htmx>=0.4.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "markdown>=3.8",
    "packaging>=25.0",
    "plexapi>=4.17.0",
    "python-dotenv>=1.1.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.3",
    "setuptools>=65.5.1",
    "sqlalchemy>=2.0.41",
    "wtforms>=3.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.14.1",
]
