[project]
name = "wizarr"
version = "2.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apprise>=1.9.3",
    "cachetools>=5.5.2",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-apscheduler>=1.13.1",
    "flask-babel>=4.0.0",
    "flask-htmx>=0.4.0",
    "flask-limiter>=3.8.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-restx>=1.3.0",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "markdown>=3.8",
    "packaging>=25.0",
    "plexapi>=4.17.0",
    "python-dotenv>=1.1.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.12.3",
    "setuptools>=65.5.1",
    "sqlalchemy>=2.0.41",
    "ty>=0.0.1a14",
    "webauthn>=2.0.0",
    "wtforms>=3.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.14.1",
    "pytest-playwright>=0.6.2",
    "pyright>=1.1.400",
    "pre-commit>=4.0.1",
    "playwright>=1.54.0",

]

[tool.ruff]
target-version = "py313"
line-length = 88
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "T20", # flake8-print (debug statements)
    "RET", # flake8-return
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long, handled by formatter
    "T201", # print statements allowed
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
include = ["app", "tests"]
exclude = ["migrations"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
