[tool.poetry]
name = "wizarr"
version = "5.0.0"
description = ""
authors = []
readme = "README.md"
packages = [
    {include = "*", from = "app"},
    {include = "run.py"}
]

[tool.poetry.scripts]
server = "run:main"

[tool.poetry.dependencies]
python = "^3.12"
litestar = {extras = ["jwt"], version = "^2.8.3"}
pydantic-settings = "^2.2.1"
pydantic = "^2.7.1"
motor = "^3.4.0"
uvicorn = "^0.29.0"
argon2-cffi = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
